# unclechu-i3-status

./: .editorconfig  .envrc.example  .gitignore  LICENSE  Makefile  README.md  cabal.project  default.nix  package.yaml  shell.nix  stack.yaml  unclechu-i3-status.cabal
nix/: clean-src.nix  sources.json  utils-pin.nix
src/: Battery.hs  Main.hs  ParentProc.hsc  Types.hs  Utils.hs  X.hs
src/UnclechuI3Status/: Battery.hs  Dzen.hs  IPC.hs  Indicators.hs  Layout.hs  ParentProc.hsc  Render.hs  Types.hs  Utils.hs  WindowTitle.hs  X.hs
src/UnclechuI3Status/EventSubscriber/: Battery.hs  DateTime.hs  IPC.hs  InputEvents.hs  WindowTitle.hs
src/UnclechuI3Status/EventSubscriber/IPC/Types/: IPCEvent.hs  XlibKeysHackIfaceParams.hs  XmonadrcIfaceParams.hs
src/UnclechuI3Status/EventSubscriber/WindowTitle/Types/: ChangeEvent.hs  EventContainer.hs  EventContainerWindowProperties.hs  EventResolve.hs  EventWorkspace.hs  WindowTitle.hs  WindowTree.hs
src/UnclechuI3Status/Handler/: AppState.hs  InputEvents.hs
src/UnclechuI3Status/Handler/AppState/: Types.hs
src/UnclechuI3Status/Utils/: Aeson.hs
x11-extras/: x11-extras.cabal
x11-extras/src/UnclechuI3Status/: X.hs
