cabal-version: 1.12

name:           x11-extras
version:        0.0.0
synopsis:       Extra X11 API calls
category:       System, Desktop Environment
homepage:       https://github.com/unclechu/unclechu-i3-status#readme
bug-reports:    https://github.com/unclechu/unclechu-i3-status/issues
author:         Viacheslav Lotsmanov
maintainer:     Viacheslav Lotsmanov <lotsmanov89@gmail.com>
copyright:      Copyright © 2017–2023 Viacheslav Lotsmanov
license:        GPL-3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/unclechu/unclechu-i3-status

library
  exposed-modules:
      UnclechuI3Status.X
  hs-source-dirs:
      src
  ghc-options: -Wall
  extra-libraries:
      Xtst
  build-depends:
      X11
    , base
    , qm-interpolated-string
    , async
  default-language: Haskell2010
